# paper-importer

./: .gitignore  README.md  install.sh  pyproject.toml
paper_importer/: cache.py  cli.py  config.py  formatter.py  translator.py  validator.py
paper_importer/fetchers/: arxiv.py  generic.py  pdf.py
